insert play functionality

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "electron-prebuilt": "^1.1.2"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "async": "^2.0.0-rc.6",
     "electron-reload": "^1.0.0",
     "handlebars": "^4.0.5",
     "jquery": "^2.2.4",
